fixed bug where only first course in course list was being saved, created query to return object with correct heirachy of all course lists, made it so that changing a courselist within a degree dynamically creates collapsable panels based on the number of groups within the courselist.

--- a/Dissertation/code/css/starterTemp.css
+++ b/Dissertation/code/css/starterTemp.css
@@ -1,6 +1,5 @@
 body {
   padding-top: 80px;
-  padding-bottom: 80px;
 }
 .starter-template {
   padding: 40px 15px;
